name:                btree-map
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/btree-map#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Map.BTree
  other-modules:       Data.Map.BTree.Internal.Branch
                       , Data.Map.BTree.Internal.Class
                       , Data.Map.BTree.Internal.Constants
                       , Data.Map.BTree.Internal.Leaf
                       , Data.Map.BTree.Internal.Splice
                       , Data.Map.BTree.Internal.Type

  build-depends:       base >= 4.7 && < 5
                        , primitive
  default-language:    Haskell2010
  ghc-options:         -O2 -W -Wall -Werror -Wincomplete-uni-patterns -Wincomplete-record-updates -fignore-asserts

source-repository head
  type:     git
  location: https://github.com/bhurt/btree-map

executable btree-benchmark
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                        , containers
                        , criterion
  default-language:    Haskell2010
  ghc-options:         -static -O2 -W -Wall -Werror -Wincomplete-uni-patterns -Wincomplete-record-updates -fignore-asserts

